apps/aimarketing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aimarketing
  labels:
    app.kubernetes.io/part-of: aimarketing
